[package]
name = "reblck"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.spwn]
path = "./SPWN-language/spwn"

[dependencies.imgui]
version = "0.8"

[dependencies.imgui-winit-support]
version = "0.8"

[dependencies.imgui-glium-renderer]
version = "0.8"

[dependencies.winit]
version = "0.25"

[dependencies.glium]
version = "0.30"